1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* genctors: Redirect into $1.c.  Use $1 as the function name.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES): Set to @LIBSWARM_LA@.
	(EXTRA_LTLIBRARIES): Set to libswarm.la.
	(libswarm_la_LDFLAGS): Add -rpath to $(libdir).  This is necessary
	because the {EXTRA,lib}_LTLIBRARIES switch loses the fact this
	can be installed.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules (CPPFLAGS): Append -Dexternvar=$(EXPORT_EXTERN)
	override.
	($(TYPEINFO)): Use single quotes on OBJCFLAGS, so that CPPFLAGS
	may contain double quotes.

        * Makefile.am (CPPFLAGS): Quote $(EXPORT_EXTERN).  It can't
        be quoted in acdll.m4 because it is extracted into externvar.h.  

1999-05-27  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (swarm_dll_SOURCES): Set to dllinit.c, so automake
	doesn't look for a bogus swarm.dll.c.

1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): Use genctors instead of inline commands.

1999-05-25    <mgd@HELEN>

	* Makefile.am (OBJS, swarm.dll): Don't take apart convenience
	libraries, just do wildcards on the subdirectories.  Add libobjc
	objects.

1999-05-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): Handle constructors.

1999-05-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (install-data-local): To avoid returning a non-true
	value to `make', re-write with explicit `if-then' test.

1999-05-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): New rule.
	(install-data-local): If SWARM_DLL is set, install libswarm.a and
	run ranlib on installed version.
	(EXTRA_PROGRAMS): Add swarm.dll.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, VERSION, AGE, lib_LTLIBRARIES,
	libswarm_la_SOURCES, LIBS, libswarm_la_LDFLAGS): New
	target for libswarm.  Include Makefile.common.